kubernetes/apps/default/it-tools/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools-external
  namespace: default
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - it-tools.nxyzo.com
  rules:
    - backendRefs:
        - name: it-tools
          namespace: default
          port: 80
